cli/tests/snapshots/cli__run_images@beside_align2.py.snap
---
source: cli/tests/cli.rs
expression: "format!(\"{out}\")"
input_file: cli/tests/images/beside_align2.py
---
<svg width="80.0" height="70.0" xmlns="http://www.w3.org/2000/svg">
  <g>
    <g>
      <g>
        <path d="M 20.0 35.0 A 10.0 35.0 0.0 0 1 0.0 35.0 A 10.0 35.0 0.0 0 1 20.0 35.0 Z" fill="rgba(186, 85, 211, 1.0)" />
        <path d="M 40.0 25.0 A 10.0 25.0 0.0 0 1 20.0 25.0 A 10.0 25.0 0.0 0 1 40.0 25.0 Z" fill="rgba(153, 50, 204, 1.0)" />
      </g>
      <path d="M 60.0 15.0 A 10.0 15.0 0.0 0 1 40.0 15.0 A 10.0 15.0 0.0 0 1 60.0 15.0 Z" fill="rgba(128, 0, 128, 1.0)" />
    </g>
    <path d="M 80.0 5.0 A 10.0 5.0 0.0 0 1 60.0 5.0 A 10.0 5.0 0.0 0 1 80.0 5.0 Z" fill="rgba(75, 0, 130, 1.0)" />
  </g>
</svg>
