cli/tests/snapshots/cli__run_images@circle1.py.snap
---
source: cli/tests/cli.rs
expression: "format!(\"{out}\")"
input_file: cli/tests/images/circle1.py
---
<svg width="60" height="60" xmlns="http://www.w3.org/2000/svg">
  <path d="M 60.5 30.5 A 30 30 0 0 1 0.5 30.5 A 30 30 0 0 1 60.5 30.5 Z" fill="none" stroke="rgba(255, 0, 0, 1.0)" stroke-linecap="round" stroke-linejoin="miter" stroke-miterlimit="10" />
</svg>
