cli/tests/snapshots/cli__run_images@circle2.py.snap
---
source: cli/tests/cli.rs
expression: "format!(\"{out}\")"
input_file: cli/tests/images/circle2.py
---
<svg width="40" height="40" xmlns="http://www.w3.org/2000/svg">
  <path d="M 40 20 A 20 20 0 0 1 0 20 A 20 20 0 0 1 40 20 Z" fill="rgba(0, 0, 255, 1.0)" />
</svg>
