cli/tests/snapshots/cli__run_images@crop2.py.snap
---
source: cli/tests/cli.rs
expression: "format!(\"{out}\")"
input_file: cli/tests/images/crop2.py
---
<svg width="40" height="60" xmlns="http://www.w3.org/2000/svg">
  <defs><clipPath id="clip0" ><rect x="0" y="0" width="40" height="60" transform="rotate(0 20 30)" /></clipPath></defs>
  <g clip-path="url(#clip0)" >
    <path d="M 40 0 A 40 60 0 0 1 -40 0 A 40 60 0 0 1 40 0 Z" fill="rgba(30, 144, 255, 1.0)" />
  </g>
</svg>
