cli/tests/snapshots/cli__run_images@crop3.py.snap
---
source: cli/tests/cli.rs
expression: "format!(\"{out}\")"
input_file: cli/tests/images/crop3.py
---
<svg width="110" height="110" xmlns="http://www.w3.org/2000/svg">
  <g>
    <g>
      <defs><clipPath id="clip0" ><rect x="7.320508" y="27.320508" width="40" height="40" transform="rotate(-30 27.320508 47.320508)" /></clipPath></defs>
      <g clip-path="url(#clip0)" >
        <path d="M 34.641016 20 A 40 40 -30 0 1 -34.641016 60 A 40 40 -30 0 1 34.641016 20 Z" fill="rgba(219, 112, 147, 1.0)" />
      </g>
      <defs><clipPath id="clip1" ><rect x="41.961524" y="7.320508" width="40" height="40" transform="rotate(-30 61.961524 27.320508)" /></clipPath></defs>
      <g clip-path="url(#clip1)" >
        <path d="M 103.923048 -20 A 40 40 -30 0 1 34.641016 20 A 40 40 -30 0 1 103.923048 -20 Z" fill="rgba(240, 128, 128, 1.0)" />
      </g>
    </g>
    <g>
      <defs><clipPath id="clip2" ><rect x="27.320508" y="61.961524" width="40" height="40" transform="rotate(-30 47.320508 81.961524)" /></clipPath></defs>
      <g clip-path="url(#clip2)" >
        <path d="M 74.641016 89.282032 A 40 40 -30 0 1 5.358984 129.282032 A 40 40 -30 0 1 74.641016 89.282032 Z" fill="rgba(240, 128, 128, 1.0)" />
      </g>
      <defs><clipPath id="clip3" ><rect x="61.961524" y="41.961524" width="40" height="40" transform="rotate(-30 81.961524 61.961524)" /></clipPath></defs>
      <g clip-path="url(#clip3)" >
        <path d="M 143.923048 49.282032 A 40 40 -30 0 1 74.641016 89.282032 A 40 40 -30 0 1 143.923048 49.282032 Z" fill="rgba(219, 112, 147, 1.0)" />
      </g>
    </g>
  </g>
</svg>
