cli/tests/snapshots/cli__run_images@crop_align3.py.snap
---
source: cli/tests/cli.rs
expression: "format!(\"{out}\")"
input_file: cli/tests/images/crop_align3.py
---
<svg width="50" height="30" xmlns="http://www.w3.org/2000/svg">
  <defs><clipPath id="clip0" ><rect x="0" y="0" width="50" height="30" transform="rotate(0 25 15)" /></clipPath></defs>
  <g clip-path="url(#clip0)" >
    <path d="M 50 15 A 25 25 0 0 1 0 15 A 25 25 0 0 1 50 15 Z" fill="rgba(123, 104, 238, 1.0)" />
  </g>
</svg>
